add example to notebook 1

--- a/notebooks/01_spec_strategy.ipynb
+++ b/notebooks/01_spec_strategy.ipynb
@@ -28,7 +28,75 @@
     "- **Zones:** Long if price in **top 35%** of OR; Short if in **bottom 35%**; else **no trade**  \n",
     "- **Risk:** SL **25 points**, TP **75 points**, **$80 per point**  \n",
     "- **Execution:** One trade per day; fills at level on intrabar high/low; round to tick (TBD)  \n",
-    "- **Policy:** Skip days with missing OR/10:22/12:00 or gaps; no premarket present\n"
+    "- **Policy:** Skip days with missing OR/10:22/12:00 or gaps; no premarket present\n",
+    "\n",
+    "## Opening Range Strategy — Quick Reference\n",
+    "\n",
+    "**Instrument:** NSXUSD (CFD-style NASDAQ-100 cash index, quoted nearly 24h; we slice to NY cash session)  \n",
+    "**Timezone:** America/New_York  \n",
+    "**Data cadence:** 1-minute OHLC (volume ignored)\n",
+    "\n",
+    "### Session & Windows\n",
+    "- **Opening Range (OR):** **09:30 → 10:00 (inclusive)** ⇒ 31 bars.\n",
+    "- **Decision time:** **10:22** (one decision per day).\n",
+    "- **Hard exit:** **12:00** (close any open trade at market).\n",
+    "\n",
+    "### Parameters (baseline)\n",
+    "| Setting | Value |\n",
+    "|---|---|\n",
+    "| Top / Bottom zone | 35% / 35% of OR |\n",
+    "| Stop Loss | **25** points |\n",
+    "| Take Profit | **75** points |\n",
+    "| Max trades/day | 1 |\n",
+    "| $ per point | **$80** (reporting) |\n",
+    "| Slippage/fees | Off in baseline (configurable later) |\n",
+    "\n",
+    "### OR definitions\n",
+    "- `OR_high` = max(**high**) from 09:30–10:00 (inclusive)  \n",
+    "- `OR_low`  = min(**low**)  from 09:30–10:00 (inclusive)  \n",
+    "- `R` = `OR_high − OR_low` (points)\n",
+    "\n",
+    "**Zone cutoffs**\n",
+    "- **Bottom-35% cutoff:** `OR_low + 0.35 * R`  \n",
+    "- **Top-35% cutoff:**    `OR_high − 0.35 * R`\n",
+    "\n",
+    "### Entry decision at 10:22\n",
+    "Let `P_10:22` = **close** of the 10:22 bar:\n",
+    "- If `P_10:22 > Top-35% cutoff` ⇒ **Long**\n",
+    "- If `P_10:22 < Bottom-35% cutoff` ⇒ **Short**\n",
+    "- Else ⇒ **No trade**\n",
+    "\n",
+    "### Risk management & exits\n",
+    "Given entry price `E` at 10:22:\n",
+    "- **Long:** `SL = E − 25`, `TP = E + 75`  \n",
+    "- **Short:** `SL = E + 25`, `TP = E − 75`\n",
+    "- Walk minute-by-minute **10:22 → 12:00**:\n",
+    "  1) Exit on **TP** touch,\n",
+    "  2) Else exit on **SL** touch,\n",
+    "  3) Else exit at **12:00** (market).\n",
+    "- **P&L (points):**  \n",
+    "  Long = `exit − E` ; Short = `E − exit`  \n",
+    "  **P&L ($)** = `P&L (pts) × $80` (later we can subtract fees/slippage).\n",
+    "\n",
+    "> **Note:** Some data feeds only store bar **close** (your baseline code checked closes). A more realistic variant detects barrier touches with bar **high/low**; if both SL & TP could be hit in the same bar, choose a documented tie-break (e.g., conservative “SL before TP”). We’ll keep this configurable later.\n",
+    "\n",
+    "### Valid-day requirements (data audit)\n",
+    "A day is tradable only if **all** hold:\n",
+    "- OR window has **31 bars**; `OR_range > 0`.\n",
+    "- Trade window **09:30–12:00** has **no missing/duplicate minutes**.\n",
+    "- Bars at **10:22** and **12:00** exist.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Worked example (2020-01-03, 09:30–10:00)\n",
+    "From the provided slice:\n",
+    "- `OR_high = 8822.17` (at 09:44)  \n",
+    "- `OR_low  = 8752.10` (at 09:30)  \n",
+    "- `R = 70.07`  \n",
+    "- **Bottom-35% cutoff** = `8752.10 + 0.35×70.07 = 8776.6245`  \n",
+    "- **Top-35% cutoff**    = `8822.17 − 0.35×70.07 = 8797.6455`  \n",
+    "Decision at **10:22** uses the 10:22 **close** relative to these cutoffs.\n",
+    "\n"
    ]
   },
   {
